# SEDE-release

./: .gitignore  .zenodo.json  LICENSE  README.md  pyproject.toml  reproduce_all.py  requirements.txt
docs/: DATA.md  DATA_AUDIT.md  PREREGISTRATION.md
experiments/: run_3x2pt_forecast.py  run_act_lensing.py  run_bayesian_evidence.py  run_birefringence.py  run_chr_soc.py  run_cmb_earlyde.py  run_delta_indirect.py  run_delta_orthogonality.py  run_deposition_drive.py  run_deriv_A_dsholo.py  run_deriv_E_nogo.py  run_ds_count.py  run_ds_resolve.py  run_e1_forecast.py  run_full_cmb_mcmc.py  run_gamma_s8_check.py  run_gamma_systematics.py  run_joint_fullcmb.py  run_kpz_membrane.py  run_literature_experiments.py  run_mechanism_forecast.py  run_no_shoes_robustness.py  run_residual_resolution.py  run_structure_de_test.py  run_tensor_network.py  run_tier2_forecast.py  run_v1_locality.py  run_wl_fisher_realistic.py  run_xval_class.py  run_xval_consistency.py  run_xval_diagnostics.py  run_xval_loo.py  run_xval_v2checks.py
paper/: LICENSE  SEDE.md  SEDE_foundations.md  build_foundations.sh  build_pdf.sh  build_tex.sh  figures.py  header.tex  make_arxiv.sh  make_foundations_figures.py  make_foundations_vector.py  make_vector_figures.py  makedoc.py  mdmath.py  refs_foundations.bib  template.tex
results/: 3x2pt_forecast.json  E1_E2_summary.md  bayesian_evidence.json  causal_set.json  e1_forecast.json  e1_min_fp_lcdm.minimize.input.yaml  e1_min_fp_lcdm.minimize.updated.yaml  e1_min_fp_lcdm.minimum  e1_min_fp_lcdm.minimum.txt  e1_min_fp_sede.minimize.input.yaml  e1_min_fp_sede.minimum  (+27 more)
(+61 files in other folders)
