[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sede"
version = "1.0.0"
description = "Structure-Entropy Dark Energy (SEDE) — reproduction code for the paper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Stilian Pandev" }]
dependencies = [
    # numpy>=2.0 (code uses np.trapezoid); numpy<2.3 (2.3's strict float(array)
    # breaks camb 1.6.6's set_cosmology). See requirements.txt for the rationale.
    "numpy>=2.0,<2.3",
    "scipy<1.14",
    "matplotlib",
    "astropy",
    "camb",
    "emcee",
    "corner",
    "colossus",
]

[project.optional-dependencies]
# Heavier / opt-in stages (see requirements.txt for which scripts use each)
full = ["classy", "cobaya", "dynesty"]

[tool.setuptools]
packages = ["sede"]
py-modules = ["reproduce_all"]
```
